# ryaspeller

./: CHANGELOG.md  Cargo.toml  Makefile  README.md
.github/workflows/: ci.yml  release.yml
examples/: simple.rs
htmlcov/: coverage.json  index.html
htmlcov/examples/: index.html  simple.rs.html
htmlcov/src/: config.rs.html  index.html  lib.rs.html
src/: README.md  config.rs  error.rs  lib.rs  main.rs
wix/: main.wxs
