[package]
name = "ryaspeller"
version = "0.1.3"
license = "Apache-2.0"
authors = ["oriontvv <taranov.vv@gmail.com>"]
edition = "2018"
description = "A tool and lib for searching typos in text, files and websites"
homepage = "https://github.com/oriontvv/ryaspeller/"
repository = "https://github.com/oriontvv/ryaspeller/"
documentation = "https://docs.rs/ryaspeller"
keywords = ["spelling", "spellcheck", "yandex", "api"]
categories = ["api-bindings", "command-line-utilities", "text-processing"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.8", features = ["derive"] }
reqwest = { version = "0.11.12", features = ["blocking", "json"] }
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.85"
anyhow = "1.0.65"
walkdir = "2.3.2"
