[package]
name = "ryaspeller"
version = "0.1.4"
license = "Apache-2.0"
authors = ["oriontvv <taranov.vv@gmail.com>"]
edition = "2018"
description = "A tool and lib for searching typos in text, files and websites"
homepage = "https://github.com/oriontvv/ryaspeller/"
repository = "https://github.com/oriontvv/ryaspeller/"
documentation = "https://docs.rs/ryaspeller"
keywords = ["spelling", "spellcheck", "yandex", "api"]
categories = ["api-bindings", "command-line-utilities", "text-processing"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
clap = { version = "4.1", features = ["derive"] }
openssl = { version = "0.10.48", features = ["vendored"] }
reqwest = { version = "0.11.14", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
walkdir = "2.3.2"
