[package]
name = "ryaspeller"
version = "0.1.4"
license = "Apache-2.0"
authors = ["oriontvv <taranov.vv@gmail.com>"]
edition = "2018"
description = "A tool and lib for searching typos in text, files and websites"
homepage = "https://github.com/oriontvv/ryaspeller/"
repository = "https://github.com/oriontvv/ryaspeller/"
documentation = "https://docs.rs/ryaspeller"
keywords = ["spelling", "spellcheck", "yandex", "api"]
categories = ["api-bindings", "command-line-utilities", "text-processing"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
clap = { version = "4.3", features = ["derive"] }
openssl = { version = "0.10.66", features = ["vendored"] }
reqwest = { version = "0.11.18", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
walkdir = "2.3.3"

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/{ version }/{ name }-linux-musl{ archive-suffix }"

[package.metadata.binstall.overrides.x86_64-pc-windows-msvc]
pkg-url = "{ repo }/releases/download/{ version }/{ name }-win{ archive-suffix }"

[package.metadata.binstall.overrides.x86_64-apple-darwin]
pkg-url = "{ repo }/releases/download/{ version }/{ name }-mac{ archive-suffix }"